deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: authproxy
  labels:
    app: authproxy
  namespace: whale-system
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: authproxy
    spec:
      serviceAccountName: authproxy
      terminationGracePeriodSeconds: 60
      containers:
      - name: authproxy
        image: getwhale/authproxy:0.0.1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 50m
            memory: 40Mi
          requests:
            cpu: 50m
            memory: 40Mi
---
apiVersion: v1
kind: Service
metadata:
  name: authproxy
  namespace: whale-system
  labels:
    app: authproxy
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: authproxy
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: authproxy
  namespace: whale-system
spec:
  rules:
  - host: proxy.whale.io
    http:
      paths:
      - backend:
          serviceName: authproxy
          servicePort: 80
        path: /
