deploy/protectedservice.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-signin: https://$host/whale-auth/sign-in/<siteID>
    ingress.kubernetes.io/auth-url: https://$host/whale-auth/auth/<siteID>
  name: protectedservice
  namespace: default
spec:
  rules:
  - host: protected.whale.io
    http:
      paths:
      - backend:
          serviceName: protectedservice
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: protectedservice-authproxy
  namespace: whale-system
spec:
  rules:
  - host: protected.whale.io
    http:
      paths:
      - backend:
          serviceName: authproxy
          servicePort: 80
        path: /whale-auth
